# agent-speaker

./: change_speaker.py  engilsh_speaker.py  excel_to_audio_verse.py  pyproject.toml  rehan_practice.xlsx  urdu_speaker.py
img_to_txt/: img_2_txt.py
perveen_shakir/: Book1.xlsx  pervenn_shakir.py  pervenn_shakir.xlsx  practice.xlsx
